Исправлена стилистика и логика работа с api
